cleanup in tournamet list, eslint updates

--- a/imports/client/tournaments/tournamentList.html
+++ b/imports/client/tournaments/tournamentList.html
@@ -54,7 +54,7 @@
                         <div class="card">
                             <div class="card-header d-none d-md-block">
                                 <strong>Gespielte Turniere</strong>
-                                {{> helpIcon text="Hier sind alle Turniere aufgelistet, bei denen ein Team gespielt hat"}}
+                                {{> helpIcon text="Hier sind vergangene Turniere der letzten 3 Jahre aufgelistet, bei denen ein Team gespielt hat"}}
                             </div>
                             <div class="list-group list-group-flush">
                                 {{#each playedTournaments}}
