updated packages to prepare for 3.0

--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -80,7 +80,7 @@
                                 </div>
                                 {{#if readme}}
                                     <div class="col-12">
-                                        {{#markdown}}{{{readme}}}{{/markdown}}
+                                        {{readme}}
                                     </div>
                                 {{/if}}
                             </div>
