small design corrections

--- a/client/blog.html
+++ b/client/blog.html
@@ -158,7 +158,7 @@
         <h5 class="blog-title">
             <a class = "" href= {{pathFor route='blog' _id=_id}}>{{blog.title}}</a>
             <br />
-            <small>
+            <small class="text-body-secondary">
                 {{#if currentUser}}
                     <span class="author">{{blog.authorName}}</span>
                 {{/if}}
