--- a/client/start.html
+++ b/client/start.html
@@ -34,6 +34,7 @@
                     {{#with settings}} 
                         {{>wikipage pageName=this.wikiStart}} 
                     {{/with}}
+                    <div>&nbsp;</div>
                     {{>blogsStart}}
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-6 col-12 start-content">
