fixed cose buttons

--- a/client/authorization.html
+++ b/client/authorization.html
@@ -6,8 +6,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="myModalLabel">Auf der Seite anmelden</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                            <span class="fa fa-close"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                         </button>
                     </div>
                     <div class="modal-body">
@@ -58,8 +57,7 @@
                             <h5 class="modal-title" id="myModalLabel">
                                     Passwort {{#if equals type "reset"}}zurück{{/if}}setzen
                             </h5>
-                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span class="fa fa-close"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                             </button>
                         </div>
                         <form class="form" id="password-reset-form">
@@ -95,8 +93,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="myModalLabel">Passwort Ändern</h5>
-                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span class="fa fa-close"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                             </button>
                         </div>
                         <div class="modal-body">
