--- a/imports/client/admin/admin.html
+++ b/imports/client/admin/admin.html
@@ -292,8 +292,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-            <span class="fa fa-close"></span>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
           <h5 class="modal-title" id="myModalLabel">Links editieren</h5>
         </div>
@@ -314,8 +313,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-            <span class="fa fa-close"></span>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
           <h5 class="modal-title">Mailserver editieren</h5>
         </div>
