--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -4,8 +4,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Bild / Dokument wählen</h5>
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     </button>
                 </div>
                 <div class="modal-body">
@@ -251,8 +250,7 @@
             <div class="modal-content">
                 {{#with file}}
                     <div class="modal-header">
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                            <span class="fa fa-close"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                         </button>
                         <h5 class="modal-title" id="myModalLabel">
                             {{name}}
