--- a/imports/client/practices/practice.html
+++ b/imports/client/practices/practice.html
@@ -37,8 +37,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     </button>
                     <h5 class="modal-title">
                         Training {{#if this._id}}bearbeiten{{else}}anlegen{{/if}}
