--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -14,8 +14,7 @@
                                 <h5 class="modal-title" id="myModalLabel">Turnier eintragen</h5>
                             {{/if}}
                             <button type="submit" class="confirm">Speichern</button>
-                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                                <span class="fa fa-close"></span>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                             </button>
                         </div>
                         <div class="modal-body">
