--- a/client/dialogs.html
+++ b/client/dialogs.html
@@ -3,8 +3,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                <span class="fa fa-close"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
             </button>
           <h5 class="modal-title">Suche</h5>
         </div>
@@ -117,8 +116,7 @@
               {{#with options}}
               <div class="modal-header">
                   <h5 class="modal-title">{{#with this.header}}{{this}}{{else}}Text eingeben{{/with}}</h5>
-                  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                      <span class="fa fa-close"></span>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                   </button>
               </div>
               <div class="">
