--- a/imports/client/forms/wysiwyg.html
+++ b/imports/client/forms/wysiwyg.html
@@ -69,8 +69,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-              <span class="fa fa-close"></span>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
           <h5 class="modal-title">
               Bild bearbeiten
