--- a/imports/client/tournaments/team.html
+++ b/imports/client/tournaments/team.html
@@ -199,8 +199,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5>Für ein Team eintragen</h5>
-          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-            <span class="fa fa-close"></span>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
         </div>
         <div class="modal-body">
@@ -372,8 +371,7 @@
               <button class="confirm" type="submit">
                 {{#if team._id}} Speichern {{else}} Anlegen {{/if}}
               </button>
-              <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
-                <span class="fa fa-close"></span>
+              <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
               </button>
             </div>
             <div class="modal-body">
@@ -596,8 +594,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
-              <span class="fa fa-close"></span>
+            <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
             </button>
             <h5 class="modal-title">Historische Ansicht</h5>
           </div>
