--- a/imports/client/user/user.html
+++ b/imports/client/user/user.html
@@ -391,8 +391,7 @@
                             {{/if}}
                         </h5>
                         {{#unless setupNeeded}}
-                            <button aria-label="Close" class="close" data-bs-dismiss="modal" type="button">
-                                <span class="fa fa-close"></span>
+                            <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
                             </button>
                         {{/unless}}
                     </div>
