--- a/client/header.html
+++ b/client/header.html
@@ -39,7 +39,7 @@
 			{{/with}}
 		</div>
 
-		<div class="header-group col-2 col-md-3 col-lg-2 text-right">
+		<div class="header-group col-2 col-md-3 col-lg-2 text-end">
 			{{#if currentUser}}
 				<a href="#" class="header-link action-search {{#if equals routeName 'search'}}active{{/if}}">
 					<span class="fa fa-search fa-lg"></span>
