--- a/client/wikipage.html
+++ b/client/wikipage.html
@@ -92,7 +92,7 @@
 							</h5>
 						{{else}}
 							{{>ultisiteWysiwyg value=wikiEntry.content source=wikiEntry}}
-							<div class="text-right">
+							<div class="text-end">
 								<button class="btn btn-light action-cancel">Abbrechen</button>
 								<button class="btn btn-primary action-save">Übernehmen</button>
 							</div>
