--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -64,7 +64,7 @@
                                         {{this.name}}
                                     {{/if}}
                                 </div>
-                                <div class="col-4 col-lg-6 text-right">
+                                <div class="col-4 col-lg-6 text-end">
                                     <button class="btn btn-light toggle-gallery-view">
                                         <span class="fa fa-{{#if galleryView}}list{{else}}th{{/if}}"></span>
                                         <span class="d-none d-lg-inline">
