--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -87,7 +87,7 @@
                                 {{/unless}}
                             </div>
                         </div>
-                        <div class="btn-group d-block d-md-none float-end text-right">
+                        <div class="btn-group d-block d-md-none float-end text-end">
                             <div class="dropdown">
                                 <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                     <span class="caret"></span>
@@ -221,8 +221,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
-                        <button class="btn btn-light btn-block btn-xs toggle-tournament-body" type="button">
+                    <div class="col-12 d-grid">
+                        <button class="btn btn-light btn-xs toggle-tournament-body" type="button">
                             {{#if tournamentBodyVisible}}
                                 <span class="fa fa-caret-up"></span><span class="fa fa-caret-up"></span><span class="fa fa-caret-up"></span>
                             {{else}}
