--- a/imports/client/user/user.html
+++ b/imports/client/user/user.html
@@ -75,9 +75,9 @@
 
                                 </li>
                                 {{#if equals _id currentUser}}
-                                    <li class="list-group-item">
+                                    <li class="list-group-item d-grid">
                                         <small>Passwort</small>
-                                        <button class="btn btn-light btn-block" data-bs-toggle="modal" data-bs-target="#passwordChange">Passwort Ändern</button>
+                                        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#passwordChange">Passwort Ändern</button>
                                     </li>
                                 {{/if}}
                                 {{#each emails}}
