--- a/packages/autoform/client/forms.html
+++ b/packages/autoform/client/forms.html
@@ -133,7 +133,7 @@
             <div class="list-group-item {{#if autoform.inline}}form-inline{{/if}}">
                 {{>afQuickField subField}}
             </div>
-            <div class="list-group-item text-right">
+            <div class="list-group-item text-end">
                 <button class="btn btn-primary action-insert">
                     Hinzufügen
                 </button>
