--- a/client/blog.html
+++ b/client/blog.html
@@ -76,7 +76,7 @@
                             kann auch von nicht angemeldeten Benutzern gelesen werden
                         </div>
                     </div>
-                    <div class="form-group text-right">
+                    <div class="form-group text-end">
                         <button type="button" class="btn btn-light btn-cancel">
                             Abbrechen
                         </button>
