--- a/imports/client/files/fileUpload.html
+++ b/imports/client/files/fileUpload.html
@@ -1,18 +1,20 @@
 
 
 <template name="fileUploader">
-    <button type="button" class="btn btn-light btn-block file-uploader {{#if dragndrop}}drag-here{{/if}} add-file">
-        {{#if uploading}}
-            <span class="fa fa-spin fa-spinner"></span> Verarbeite Dateien
-        {{else}}
-            Datei(en)
-            {{#if dragndrop}}
-                hierher ziehen, oder
+    <div class="d-grid gap-2">
+        <button type="button" class="btn btn-light file-uploader {{#if dragndrop}}drag-here{{/if}} add-file">
+            {{#if uploading}}
+                <span class="fa fa-spin fa-spinner"></span> Verarbeite Dateien
+            {{else}}
+                Datei(en)
+                {{#if dragndrop}}
+                    hierher ziehen, oder
+                {{/if}}
+                auswählen
             {{/if}}
-            auswählen
-        {{/if}}
-    </button>
-    <form class="form" style="display:none">
-        <input type="file" class="file-upload" multiple="true" />
-    </form>
+        </button>
+        <form class="form" style="display:none">
+            <input type="file" class="file-upload" multiple="true" />
+        </form>
+    </div>
 </template>
