--- a/packages/autoform/client/forms.html
+++ b/packages/autoform/client/forms.html
@@ -81,7 +81,7 @@
                             <div class="input-group">
                             <input name="{{name}}" class="form-control {{validity}}" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" {{autoform.inputAttribs}}/>
                             <span class="input-group-btn">
-                                <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <button class="btn btn-light" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="fa fa-calendar"></span>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-end">
