--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-12 col-sm-4 col-md-3 col-lg-2 info-area">
                             <div class="tournament-value">
-                                <span class="fa fa-clock-o fa-fw"></span>
+                                <span class="fa fa-clock fa-fw"></span>
                                 {{#if equals numDays 1}}Ein Tag{{else}}{{numDays}} Tage{{/if}}
                             </div>
                             <div class="tournament-value">
